--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
 
 :root {
@@ -35,14 +36,14 @@ body {
   overflow-x: hidden;
 }
 
-.matrix-background {
+.matrix-bg {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  pointer-events: none;
   z-index: -1;
+  opacity: 0.15;
 }
 
 .matrix-column {
@@ -63,7 +64,7 @@ body {
   align-items: center;
   padding: 2rem;
   text-align: center;
-  background: linear-gradient(rgba(10,10,18,0.9), rgba(10,10,18,0.95));
+  
 }
 
 .logo {
